Bug 1767337 - Ignore duplicate pan-end events at the end of a pan gesture. r=botond

Some Wayland version send such duplicate events and they could cause the
page to be stuck in overscroll if the pan gesture ends without velocity for
momentum scrolling.

Differential Revision: https://phabricator.services.mozilla.com/D159139